--- a/frontend/src/app/components/auth/signup.html
+++ b/frontend/src/app/components/auth/signup.html
@@ -6,8 +6,12 @@
     <form class="mt-8 space-y-6" (ngSubmit)="onSubmit()">
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
-          <label for="name" class="sr-only">Full name</label>
-          <input id="name" name="name" type="text" [(ngModel)]="credentials.name" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-text rounded-t-md focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm" placeholder="Full name" />
+          <label for="firstName" class="sr-only">Firstname</label>
+          <input id="firstName" name="firstName" type="text" [(ngModel)]="credentials.firstName" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-text rounded-t-md focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm" placeholder="Full name" />
+        </div>
+        <div>
+          <label for="lastName" class="sr-only">Lastname</label>
+          <input id="lastName" name="lastName" type="text" [(ngModel)]="credentials.lastName" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-text focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm" placeholder="Last name" />
         </div>
         <div>
           <label for="email" class="sr-only">Email address</label>
