--- a/frontend/src/app/components/auth/signup.html
+++ b/frontend/src/app/components/auth/signup.html
@@ -7,7 +7,7 @@
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
           <label for="firstName" class="sr-only">Firstname</label>
-          <input id="firstName" name="firstName" type="text" [(ngModel)]="credentials.firstName" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-text rounded-t-md focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm" placeholder="Full name" />
+          <input id="firstName" name="firstName" type="text" [(ngModel)]="credentials.firstName" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-text rounded-t-md focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm" placeholder="First name" />
         </div>
         <div>
           <label for="lastName" class="sr-only">Lastname</label>
